update email-password; migrate email-sms-otp from sanity to mdx

--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -1,26 +1,24 @@
 ---
-title: Custom Email Password Flow
-description: Clerk provides the `useSignUp` and `useSignIn` hooks, which allow you to build your own custom sign up and sign in flows.
+title: Custom email/password flow
+description: Clerk provides the useSignUp and useSignIn hooks, which allow you to build your own custom sign up and sign in flows.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {CodeBlockTabs} from "@/components/CodeBlockTabs";
+# Custom email/password flow
 
-# Custom email password flow
-
-In some cases, Clerk components may not work for your product which is why the `useSignUp` and `useSignIn` hooks are provided. These hooks allow you to build your own custom sign up and sign in flows.
+Clerk supports password authentication, which allows users to sign up and sign in using their email address and password. This guide will walk you through how to build a custom email/password sign-up and sign-in flow using the [`useSignUp()`][use-signup-ref] and [`useSignIn()`][use-signin-ref] React hooks.
 
 <Steps>
 
 ### Enable password and email
 
-In the Clerk dashboard, you will need to enable both email and password as a sign in and sign up method. You can do this by enabling this on the [Email, Phone, and Username](https://dashboard.clerk.dev/last-active?path=user-authentication/email-phone-username) section.
+In the Clerk dashboard, you will need to enable both email and password as a sign-in and sign-up method. Navigate to the [Email, Phone, and Username](https://dashboard.clerk.dev/last-active?path=user-authentication/email-phone-username) tab of the **User & Authentication** section in the Clerk Dashboard. Toggle on **Email address** and **Password**.
 
-![example of enabling email and password](/docs/images/users/guides/custom-flows/email-password/enable-email-password.png)
+<Images
+  width={3024}
+  height={1654}
+  src="/docs/images/custom-flows/enable-email-password.jpg"
+  alt="The 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing the title of the page. There are also red arrows pointing to the toggles for 'Email address' and 'Password', both toggled on."
+/>
 
 ### Create sign up flow
 
@@ -28,7 +26,7 @@ The email/password sign-up flow requires users to provide their email address an
 
 A successful sign-up consists of the following steps:
 
-1. Initiate the sign-up process, by collecting the user's email address and password.
+1. Initiate the sign-up process by collecting the user's email address and password.
 2. Prepare the email address verification, which sends a one-time code to the given address.
 3. Attempt to complete the email address verification by supplying the one-time code.
 4. If the email address verification is successful, complete the sign-up process by creating the user account and setting their session as active.
@@ -37,7 +35,7 @@ A successful sign-up consists of the following steps:
 
 <Tab>
 <CodeBlockTabs options={['Pages Router', 'App Router']}>
-```tsx copy filename="pages/sign-up/[[...index]].tsx"
+```tsx filename="pages/sign-up/[[...index]].tsx"
 import { useState } from "react";
 import { useSignUp } from "@clerk/nextjs";
 import { useRouter } from "next/router";
@@ -130,7 +128,7 @@ export default function SignUpForm() {
   );
 }
 ```
-```tsx copy filename="app/sign-up/[[...sign-up]].page.tsx"
+```tsx filename="app/sign-up/[[...sign-up]].page.tsx"
 "use client"
 import { useState } from "react";
 import { useSignUp } from "@clerk/nextjs";
@@ -228,7 +226,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="signup.tsx"
+```tsx filename="signup.tsx"
 import { useState } from "react";
 import { useSignUp } from "@clerk/clerk-react";
 
@@ -321,7 +319,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="app/routes/sign-up/$.tsx"
+```tsx filename="app/routes/sign-up/$.tsx"
 import { useState } from "react";
 import { useSignUp } from "@clerk/remix";
 
@@ -415,7 +413,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="sign-up.tsx"
+```tsx filename="sign-up.tsx"
 import { useState } from "react";
 // Use the react package when using Gatsby
 import { useSignUp } from "@clerk/react";
@@ -512,7 +510,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="SignUpScreen.tsx"
+```tsx filename="SignUpScreen.tsx"
 import * as React from "react";
 import { Text, TextInput, TouchableOpacity, View } from "react-native";
 import { useSignUp } from "@clerk/clerk-expo";
@@ -613,7 +611,7 @@ export default function SignUpScreen() {
 </Tab>
 
 <Tab>
-```html copy filename="your-app.html"
+```html filename="your-app.html"
 <!DOCTYPE html>
 <html lang="en">
 
@@ -693,7 +691,7 @@ In email/password authentication, the sign-in is a process that requires users t
 
 <Tab>
 <CodeBlockTabs options={['Pages Router', 'App Router']}>
-```tsx copy filename="pages/sign-in/[[...index]].tsx"
+```tsx filename="pages/sign-in/[[...index]].tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/nextjs";
 import { useRouter } from "next/router";
@@ -748,7 +746,7 @@ export default function SignInForm() {
   );
 }
 ```
-```tsx copy filename="app/sign-in/[[...sign-in]].page.tsx"
+```tsx filename="app/sign-in/[[...sign-in]].page.tsx"
 "use client"
 import { useState } from "react";
 import { useSignIn } from "@clerk/nextjs";
@@ -808,7 +806,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="signin.tsx"
+```tsx filename="signin.tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/clerk-react";
 
@@ -863,7 +861,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="app/routes/sign-in/$.tsx"
+```tsx filename="app/routes/sign-in/$.tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/remix";
 
@@ -918,7 +916,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="sign-in.tsx"
+```tsx filename="sign-in.tsx"
 import { useState } from "react";
 // Use React for Gatsby
 import { useSignIn } from "@clerk/clerk-react";
@@ -974,7 +972,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="SignUpScreen.tsx"
+```tsx filename="SignUpScreen.tsx"
 import React from "react";
 import { Text, TextInput, TouchableOpacity, View } from "react-native";
 import { useSignIn } from "@clerk/clerk-expo";
@@ -1038,7 +1036,7 @@ export default function SignInScreen() {
 </Tab>
 
 <Tab>
-```html copy filename="your-app.html"
+```html filename="your-app.html"
 <!DOCTYPE html>
 <html lang="en">
 
