use sign-in and sign-up noun versions

--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -1,6 +1,6 @@
 ---
 title: Custom email/password flow
-description: Clerk provides the useSignUp and useSignIn hooks, which allow you to build your own custom sign up and sign in flows.
+description: Clerk provides the useSignUp and useSignIn hooks, which allow you to build your own custom sign-up and sign-in flows.
 ---
 
 # Custom email/password flow
