--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -5,7 +5,7 @@ description: Clerk provides the useSignUp and useSignIn hooks, which allow you t
 
 # Custom email/password flow
 
-Clerk supports password authentication, which allows users to sign up and sign in using their email address and password. This guide will walk you through how to build a custom email/password sign-up and sign-in flow using the [`useSignUp()`][use-signup-ref] and [`useSignIn()`][use-signin-ref] React hooks.
+Clerk supports password authentication, which allows users to sign up and sign in using their email address and password. This guide will walk you through how to build a custom email/password sign-up and sign-in flow using the [`useSignUp()`](/docs/references/react/use-sign-up) and [`useSignIn()`](/docs/references/react/use-sign-up) React hooks.
 
 <Steps>
 
