fix codeblocktabs element

--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -59,7 +59,7 @@ A successful sign-up consists of the following steps:
 
 Let's see the above in action. If you want to learn more about sign-ups, check out our documentation on Clerk's [sign-up flow](/docs/custom-flows/overview#sign-up-flow).
 
-<CodeBlockTabs options={["React, JavaScript"]}>
+<CodeBlockTabs options={["React", "JavaScript"]}>
 ```jsx filename="SignUpPage.jsx"
 import { useSignUp } from "@clerk/clerk-react";
 
