--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -471,7 +471,8 @@ The sign-in process can be completed on the same or a different device. For exam
 Let's see all the steps involved in more detail.
 
 - Initiate the sign-in process, by collecting the user's authentication identifier. It must be their email address.
-- Start the magic link verification flow. - There are two parts to the flow:
+- Start the magic link verification flow. 
+- There are two parts to the flow:
   - Prepare a verification for the email address by sending an email with a magic link to the user.
   - Wait until the magic link is clicked. This is a polling behavior that can be canceled at any time.
 - Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
