update bullet points

--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -865,11 +865,11 @@ cancelMagicLinkFlow();
 
 Magic links can also provide a nice user experience for verifying email addresses that users add when updating their profiles. The flow is similar to one-time code verification, but users need only click on the magic link; there's no need to return to your app.
 
-1. Collect the user's email address.
-2. Start the magic link verification flow. There are two parts to the flow:
-  1. Prepare a verification for the email address by sending an email with a magic link to the user.
-  2. Wait until the magic link is clicked. This is a polling behavior that can be canceled at any time.
-3. Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
+- Collect the user's email address.
+- Start the magic link verification flow. There are two parts to the flow:
+  - Prepare a verification for the email address by sending an email with a magic link to the user.
+  - Wait until the magic link is clicked. This is a polling behavior that can be canceled at any time.
+- Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
   - The verification was successful.
   - The verification failed or the magic link has expired.
 
