feat: Add initialValues prop for sign in/up to docs

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -157,5 +157,12 @@ All props below are optional.
         <>The full URL or path to navigate after a successful sign up.</>,
       ],
     },
+    {
+      cells: [
+        <code>initialValues</code>,
+        <code>object</code>,
+        <>The values used to prefill the sign in fields with.</>,
+      ],
+    },
   ]}
 />
