fix broken link

--- a/docs/backend-requests/making/jwt-templates.mdx
+++ b/docs/backend-requests/making/jwt-templates.mdx
@@ -146,7 +146,7 @@ Using the same notation (`.`), you can fetch data from nested fields of arbitrar
 
 The same syntax works also for organization and organization membership metadata fields.
 
-Future extensions to the template language may provide more ways to query for specific data. Until then, please [contact us](support@clerk.dev) if you need something that is not currently supported.
+Future extensions to the template language may provide more ways to query for specific data. Until then, please [contact us](https://clerk.com/support) if you need something that is not currently supported.
 
 ### Interpolation
 
