update: Mention `mutate` in useOrganizationList

--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -11,6 +11,8 @@ The `useOrganizationList` hook allows you to retrieve the memberships, invitatio
 
 The `useOrganizationList` hook requires developers to opt-in by specifying which resource they need to fetch and paginate through. It is ideal for infinite lists or tables.
 
+Under the hood, `useOrganizationList` is powered by SWR in order to support caching and pagination. Part of the return values from this hook are directly exported from useSWR and useSWRInfinite and you can find more information in [their documentation page](https://swr.vercel.app/docs/getting-started)
+
 ### Infinite list of joined organizations
 <CodeBlockTabs options={['Next.js', 'React']}>
 ```tsx filename="pages/joined-organizations.tsx"
@@ -263,3 +265,4 @@ The `userMemberships`, `userInvitations`, and `userSuggestions` are returned as 
 | `fetchNext` | A helper function that triggers the previous page to be loaded. This is the same as `fetchPage(page=> Math.max(0, page + 1))` |
 | `hasNextPage` | A boolean that indicates if there are available pages to be fetched. |
 | `hasPreviousPage` | A boolean that indicates if there are available pages to be fetched. |
+| `mutate` | A function for mutating the related cache for each paginated list. Also know as [Bound Mutate](https://swr.vercel.app/docs/mutation#bound-mutate). For more details about mutations please visit the [SWR docs](https://swr.vercel.app/docs/mutation)
