update: useOrganizationList add example with mutate

--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -20,7 +20,7 @@ import { useOrganizationList } from "@clerk/nextjs";
 import React from "react";
 
 const JoinedOrganizationList = () => {
-  const { isLoaded, setActive, userMemberships } = useOrganizationList({
+  const { isLoaded, setActive, userMemberships, createOrganization } = useOrganizationList({
     userMemberships: {
       infinite: true,
     },
@@ -51,6 +51,19 @@ const JoinedOrganizationList = () => {
       >
         Load more
       </button>
+
+      <button
+        disabled={!isLoaded}
+        onClick={async () => {
+          await createOrganization({
+              name: 'randomOrg' + Date.now(),
+              slug: 'random-org' + Date.now(),
+          });
+          await userMemberships.mutate();
+        }}
+      >
+        Create Organization
+      </button>
     </>
   );
 };
@@ -63,7 +76,7 @@ import { useOrganizationList } from "@clerk/clerk-react";
 import React from "react";
 
 const JoinedOrganizationList = () => {
-  const { isLoaded, setActive, userMemberships } = useOrganizationList({
+  const { isLoaded, setActive, userMemberships, createOrganization} = useOrganizationList({
     userMemberships: {
       infinite: true,
     },
@@ -93,6 +106,19 @@ const JoinedOrganizationList = () => {
         onClick={() => userMemberships.fetchNext()}
       >
         Load more
+      </button>
+        
+      <button
+        disabled={!isLoaded}
+        onClick={async () => {
+          await createOrganization({
+              name: 'randomOrg' + Date.now(),
+              slug: 'random-org' + Date.now(),
+          });
+          await userMemberships.mutate();
+        }}
+      >
+        Create Organization
       </button>
     </>
   );
