fix parts of speech for sign-in and sign-up

--- a/docs/custom-flows/oauth-connections.mdx
+++ b/docs/custom-flows/oauth-connections.mdx
@@ -11,7 +11,7 @@ In case one of our [standard OAuth integration methods](/docs/authentication/soc
   You still need to configure your instance through the Clerk Dashboard, as described at [the top of the OAuth guide](/docs/authentication/social-connections/oauth#configuration).
 </Callout>
 
-When using OAuth, the sign in and sign up are equivalent. A successful OAuth flow consists of the following steps:
+When using OAuth, the sign-in and sign-up are equivalent. A successful OAuth flow consists of the following steps:
 
 1. Start the OAuth flow by calling [`SignIn.authenticateWithRedirect(params)`](/docs/references/javascript/sign-in/authenticate-with#authenticate-with-redirect) or [`SignUp.authenticateWithRedirect(params)`](/docs/references/javascript/sign-up/authenticate-with#authenticate-with-redirect). Note that both of these methods require a `redirectUrl` param, which is the URL that the browser will be redirected to once the user authenticates with the OAuth provider.
 2. Create a route at the URL `redirectUrl` points, typically `/sso-callback`, that calls the [`Clerk.handleRedirectCallback()`](/docs/references/javascript/clerk/handle-navigation#handle-redirect-callback) or simply renders the prebuilt [`<AuthenticateWithRedirectCallback/>`](/docs/components/control/authenticate-with-callback) component.
@@ -127,7 +127,7 @@ To whitelist a redirect URL via the Clerk Dashboard, go to the [Social Connectio
 
 When a user initiates an OAuth verification during sign-in or sign-up, it may sometimes be necessary to move the verification between the two flows.
 
-For example, if someone already has an account, and tries to go through the sign up flow with the same OAuth account, they can't perform a successful sign up again. Or, if someone attempts to sign in with their OAuth credentials but does not yet have an account, they won't be signed in to the account. For these scenarios, Clerk provides "account transfers."
+For example, if someone already has an account, and tries to go through the sign up flow with the same OAuth account, they can't perform a successful sign-up again. Or, if someone attempts to sign in with their OAuth credentials but does not yet have an account, they won't be signed in to the account. For these scenarios, Clerk provides "account transfers."
 
 ```js
 // Get sign-in and sign-up objects in the OAuth callback page
