--- a/docs/custom-flows/oauth-connections.mdx
+++ b/docs/custom-flows/oauth-connections.mdx
@@ -16,8 +16,9 @@ When using OAuth, the sign-in and sign-up are equivalent. A successful OAuth flo
 1. Start the OAuth flow by calling [`SignIn.authenticateWithRedirect(params)`](/docs/references/javascript/sign-in/authenticate-with#authenticate-with-redirect) or [`SignUp.authenticateWithRedirect(params)`](/docs/references/javascript/sign-up/authenticate-with#authenticate-with-redirect). Note that both of these methods require a `redirectUrl` param, which is the URL that the browser will be redirected to once the user authenticates with the OAuth provider.
 2. Create a route at the URL `redirectUrl` points, typically `/sso-callback`, that calls the [`Clerk.handleRedirectCallback()`](/docs/references/javascript/clerk/handle-navigation#handle-redirect-callback) or simply renders the prebuilt [`<AuthenticateWithRedirectCallback/>`](/docs/components/control/authenticate-with-callback) component.
 
-he React example below uses `react-router-dom` to define the required route. For NextJS apps, you only need to create a `pages/sso-callback` file.
+The React example below uses `react-router-dom` to define the required route. For NextJS apps, you only need to create a `pages/sso-callback` file.
 
+<CodeBlockTabs options={["React"]}>
 ```jsx
 import React from "react";
 import {
@@ -91,6 +92,7 @@ function SignInOAuthButtons() {
 
 export default App;
 ```
+</CodeBlockTabs>
 
 To initiate an OAuth flow for a user that is already signed in, you can use the [`user.createExternalAccount(params)`](/docs/references/javascript/user/create-metadata#create-external-account) method, where `user` is a reference to the currently signed in user.
 
@@ -129,6 +131,7 @@ When a user initiates an OAuth verification during sign-in or sign-up, it may so
 
 For example, if someone already has an account, and tries to go through the sign up flow with the same OAuth account, they can't perform a successful sign-up again. Or, if someone attempts to sign in with their OAuth credentials but does not yet have an account, they won't be signed in to the account. For these scenarios, Clerk provides "account transfers."
 
+<CodeBlockTabs options={["JavaScript"]}>
 ```js
 // Get sign-in and sign-up objects in the OAuth callback page
 const { signIn, signUp } = window.Clerk.client;
@@ -169,3 +172,4 @@ if (userNeedsToBeCreated) {
   }
 }
 ```
+</CodeBlockTabs>
