add images; add copy about requiring email addresses

--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -21,7 +21,7 @@ Your users will still be able to choose an alternative authentication (or verifi
 
 ## Magic link flow
 
-Magic links can be used to easily authenticate users or verify their email addresses. In all the above cases, Clerk will take care of the plumbing and allow you to offer a seamless experience to your users:
+Magic links can be used to easily authenticate users or verify their email addresses. Clerk will take care of the plumbing and allow you to offer a seamless experience to your users. The magic link flow looks like this:
 
 1. The user enters their email address and asks for a magic link.
 2. Your application waits for the verification result.
@@ -54,7 +54,29 @@ Magic link authentication can be configured through the [Clerk Dashboard](https:
   alt="The 'Authentication factors' section of the 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing to the 'Email verification link' toggle, which is toggled on."
 />
 
-Don't forget that you also need to make sure you've configured your application instance to request the user's email address. Users can receive magic links only via email messages. Make sure you toggle on **Email address** under the **Contact information** section. You can toggle on **Require** if you want to make sure that all users have an email address associated with their profile.
+Don't forget that you also need to make sure you've configured your application instance to request the user's email address. Users can receive magic links only via email messages. Make sure you toggle on **Email address** under the **Contact information** section. 
+
+<Images 
+  width={3024}
+  height={1654}
+  src="/docs/images/custom-flows/toggle-email-address.jpg"
+  alt="The 'Contact information' section of the 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing to the 'Email address' toggle, which is toggled on."
+/>
+
+If you click on the **Settings cog** icon next to **Email address**, the email address configuration screen will pop open. You can toggle on **Require** if you want to make sure that all users have an email address associated with their profile. 
+
+You can also find the **Verification methods** section on this screen. Here, you can toggle on **Email verification link** if you would like to allow your users to verify their email with a magic link. You can also toggle on **Email verification code** if you would like to allow your users to verify their email with a one-time passcode.
+
+<Callout type="info">
+  **Verification methods** are different from **Authentication factors**. **Verification methods** are used for verifying a user's identifier, such as an email address upon initial sign-up or when updating their profile. **Authentication factors** are used for authenticating a user, such as when they are signing in to your application.
+</Callout>
+
+<Images 
+  width={3024}
+  height={1654}
+  src="/docs/images/custom-flows/email-verification-link.jpg"
+  alt="The 'Email address' configuration settings modal. There is a red arrow pointing to the Settings cog next to 'Email address', showing where a user must click to open this modal. In this modal, there is a red arrow pointing to the 'Require' toggle, which is toggled on. There is also a red box surrounding the 'Verifcation methods' section, and within this section, there are red arrows pointing to 'Email verification link' and 'Email verification code' check boxes, both checked."
+/>
 
 ## Custom flow
 
