--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -1,9 +1,9 @@
 ---
-title: Magic Links
+title: Magic links
 description: Learn how to authenticate or verify users with magic links.
 ---
 
-# Magic Links
+# Magic links
 
 Clerk supports passwordless authentication with magic links, which lets users sign in and sign up without having to remember a password. During login or registration, users will be asked to enter their email address. They will receive an email message with a link that can be clicked in order to complete the authentication process.
 
