--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -11,7 +11,7 @@ Arguably, passwordless authentication provides greater security and a better use
 
 There are multiple ways to set up passwordless authentication in Clerk such as using [Clerk Components](/docs/components/overview), or by creating a [custom flow](#custom-flow) using Clerk's SDKs.
 
-The rest of this guide will explain how to set up passwordless authentication using any of the above methods. Before you start, you will need to [configure](#configure) your instance to allow passwordless sign-ins.
+The rest of this guide will explain how to set up passwordless authentication using any of the above methods. Before you start, you will need to [configure](#configuration) your instance to allow passwordless sign-ins.
 
 <Callout type="info">
   Looking for magic links? Check out our [Magic links authentication](/docs/custom-flows/magic-links) guide.
