Migrate email-sms-otp from Sanity to MDX (#305)

--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -1,26 +1,24 @@
 ---
-title: Custom Email Password Flow
-description: Clerk provides the `useSignUp` and `useSignIn` hooks, which allow you to build your own custom sign up and sign in flows.
+title: Custom email/password flow
+description: Clerk provides the useSignUp and useSignIn hooks, which allow you to build your own custom sign-up and sign-in flows.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {CodeBlockTabs} from "@/components/CodeBlockTabs";
+# Custom email/password flow
 
-# Custom email password flow
-
-In some cases, Clerk components may not work for your product which is why the `useSignUp` and `useSignIn` hooks are provided. These hooks allow you to build your own custom sign up and sign in flows.
+Clerk supports password authentication, which allows users to sign up and sign in using their email address and password. This guide will walk you through how to build a custom email/password sign-up and sign-in flow using the [`useSignUp()`](/docs/references/react/use-sign-up) and [`useSignIn()`](/docs/references/react/use-sign-up) React hooks.
 
 <Steps>
 
 ### Enable password and email
 
-In the Clerk dashboard, you will need to enable both email and password as a sign in and sign up method. You can do this by enabling this on the [Email, Phone, and Username](https://dashboard.clerk.dev/last-active?path=user-authentication/email-phone-username) section.
+In the Clerk dashboard, you will need to enable both email and password as a sign-in and sign-up method. Navigate to the [Email, Phone, and Username](https://dashboard.clerk.dev/last-active?path=user-authentication/email-phone-username) tab of the **User & Authentication** section in the Clerk Dashboard. Toggle on **Email address** and **Password**.
 
-![example of enabling email and password](/docs/images/users/guides/custom-flows/email-password/enable-email-password.png)
+<Images
+  width={3024}
+  height={1654}
+  src="/docs/images/custom-flows/enable-email-password.jpg"
+  alt="The 'Email, Phone, and Username' page in the Clerk dashboard. There is a red arrow pointing the title of the page. There are also red arrows pointing to the toggles for 'Email address' and 'Password', both toggled on."
+/>
 
 ### Create sign up flow
 
@@ -28,7 +26,7 @@ The email/password sign-up flow requires users to provide their email address an
 
 A successful sign-up consists of the following steps:
 
-1. Initiate the sign-up process, by collecting the user's email address and password.
+1. Initiate the sign-up process by collecting the user's email address and password.
 2. Prepare the email address verification, which sends a one-time code to the given address.
 3. Attempt to complete the email address verification by supplying the one-time code.
 4. If the email address verification is successful, complete the sign-up process by creating the user account and setting their session as active.
